[package]
name = "astar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
rusted_cypher = "1.1.0"
uuid = { version = "1.3.0", features = ["v4"] }
lazy_static = "1.4.0"